# crystal-ball-trader

./: .gitignore  README.md  pyproject.toml
examples/: agent_view.json  outcome.json
prompts/: agent_operator.md
src/crystal_ball/: __init__.py  cli.py  engine.py  ledger.py  models.py
tests/: test_engine.py
