[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crystal-ball-trader"
version = "0.1.0"
description = "Deterministic risk engine for LLM-operated Crystal Ball trading experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Elm Wealth" }
]
dependencies = []

[project.scripts]
crystal-ball = "crystal_ball.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
